@@ -1,10 +1,14 @@
 package project.map.controller;
 
 import java.io.Console;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.hibernate.internal.build.AllowSysOut;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -22,6 +26,7 @@ import project.map.dto.AreaDTO;
 import project.map.dto.CheckListDTO;
 import project.map.dto.CheckListDTO.Items;
 import project.map.dto.MapDTO;
+import project.map.dto.MapDTO.MapObject;
 import project.map.dto.ResponseDTO;
 import project.map.dto.TripDTO;
 import project.map.entity.AreaEntity;
@@ -54,16 +59,27 @@ public class TripController {
 	@Autowired
 	private AreaRepository areaRepository;
 
-	// ---------------- 메인페이지 -----------------------
-	// areaNm에 대한 signguNm리스트 반환
-	// 만약 @RequestParam으로 쓰면 (@RequestParam String AreaNm)
+	
+	
+	
+	// 메인페이지 areaCd를 통해 SignguNm 모달위에 매핑
 	@GetMapping("/1")
-	public ResponseEntity<?> getAreaCd(@RequestParam String areaNm) {
-		List<AreaEntity> list = tripService.getSignguNms(areaNm);
-		List<AreaDTO> dtos = list.stream().map(AreaDTO::new).toList();
-		ResponseDTO<AreaDTO> response = ResponseDTO.<AreaDTO>builder().data(dtos).build();
-		return ResponseEntity.ok(response);
+	public ResponseEntity<?> getSignguNm(@RequestParam (name = "areaCd") String areaCd) {
+
+		try {
+			System.out.println("areaCd: " + areaCd);
+			List<String> dtos = tripService.getSignguNms(areaCd);
+			ResponseDTO<String> response = ResponseDTO.<String>builder().data(dtos).build();
+			System.out.println(response);
+			return ResponseEntity.ok(response);
+		} catch (Exception e) {
+			e.printStackTrace(); // 에러 로그 출력
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Internal Server Error");
+		}
 	}
+	
+
+	
 
 	// areaNm과 signguNm으로 cd들 반환
 	// 만약 @RequestParam으로 쓰면 (@RequestParam String areaNm,@RequestParam String
@@ -84,9 +100,23 @@ public class TripController {
 	// TripEntity 객체들 반환(여행목록에 여행리스트)
 	// 만약 @RequestParam으로 쓰면 (@RequestParam String userId)
 	@GetMapping("/3")
-	public ResponseEntity<?> getTrips(@AuthenticationPrincipal String userId) { // requestParam 으로 userId를 받지않고 
+	public ResponseEntity<?> getTrips(@AuthenticationPrincipal String userId) { // requestParam 으로 userId를 받지않고
 		List<TripEntity> list = tripService.getTrips(userId);
-		List<TripDTO> dtos = list.stream().map(TripDTO::new).toList();
+		System.out.println("list : "+list);
+		List<TripEntity> updatedList = list.stream()
+			    .map(data -> {
+			        String updatedTitle = tripService.titleFromDB(data.getTitle()); 
+			        return TripEntity.builder()
+			            .idx(data.getIdx())  
+			            .startDate(data.getStartDate())  
+			            .lastDate(data.getLastDate())  			
+			            .title(updatedTitle)  
+			            .user(data.getUser())  
+			            .build();
+			    })
+			    .collect(Collectors.toList());
+		System.out.println("updatedlist: "+updatedList);
+		List<TripDTO> dtos = updatedList.stream().map(TripDTO::new).toList();
 		ResponseDTO<TripDTO> response = ResponseDTO.<TripDTO>builder().data(dtos).build();
 		return ResponseEntity.ok(response);
 	}
@@ -95,20 +125,34 @@ public class TripController {
 	// 만약 @RequestParam으로 쓰면 (@RequestParam String userId,@RequestParam String
 	// title)
 	@GetMapping("/4")
-	public ResponseEntity<?> getMaps(@RequestParam String userId, @RequestParam String tripTitle,@RequestParam Integer days) {
-		List<MapEntity> list = tripService.getMaps(userId, tripTitle,days);
-		List<MapDTO> dtos = list.stream().map(MapDTO::new).toList();
-		ResponseDTO<MapDTO> response = ResponseDTO.<MapDTO>builder().data(dtos).build();
-		return ResponseEntity.ok(response);
+	public ResponseEntity<?> getMaps(@AuthenticationPrincipal String userId, @RequestParam(name="tripTitle") String tripTitle) {
+		String title = tripService.titleToDB(userId, tripTitle);
+		List<MapEntity> list = tripService.getMaps(userId, title);
+		TripEntity trip = tripRepository.getByTitle(title);
+		trip.setTitle(tripService.titleFromDB(title));
+		
+		List<MapDTO> updatedList = list.stream()
+		        .map(data -> new MapDTO(data))  // MapEntity를 MapDTO로 변환
+		        .collect(Collectors.toList());
+
+		    return ResponseEntity.ok(updatedList);
 	}
 
+	
+
 	@GetMapping("/5")
-	public ResponseEntity<?> getCheckList(@RequestParam String userId, @RequestParam String tripTitle) {
-		String items = tripService.getCheckLists(userId, tripTitle);
-		List<Items> list = tripService.parseItems(items);
-		ResponseDTO<Items> response = ResponseDTO.<Items>builder().data(list).build();
-		return ResponseEntity.ok(response);
+	public ResponseEntity<?> getCheckList(@AuthenticationPrincipal String userId, @RequestParam(name="tripTitle") String tripTitle) {
+		String title = tripService.titleToDB(userId, tripTitle);
+		String items = tripService.getCheckLists(userId, title);
+		Integer foundIdx = tripService.getIdxByItems(items);
+		CheckListEntity entity = CheckListEntity.builder().idx(foundIdx).items(items).build();
+		List<Items> list = tripService.parseItems(entity.getItems());
+		CheckListDTO dto = CheckListDTO.builder().idx(foundIdx).items(list).build();
+		return ResponseEntity.ok(dto);
 	}
+
+//	}
+	
 	// ----------------- GET ----------------------------
 
 	// ----------------- POST ---------------------------
@@ -122,36 +166,59 @@ public class TripController {
 		TripEntity entity = TripEntity.builder().title(confirmedTitle).startDate(dto.getStartDate())
 				.lastDate(dto.getLastDate()).user(user).build();
 		tripRepository.save(entity);
-		
+
 	}
 
 	// map객체 저장
 	@PostMapping("/2")
 	public void postMaps(@AuthenticationPrincipal String userId, @RequestBody MapDTO dto) {
 		UserEntity user = userRepository.findById(userId).get();
-		TripEntity trip = tripRepository.getByTitle(dto.getTripTitle());
-		MapEntity entity = MapEntity.builder().startPoint(dto.getStartPoint()).startPlace(dto.getStartPlace())
-				.startAddress(dto.getStartAddress()).goalPoint(dto.getGoalPoint()).goalPlace(dto.getGoalPlace())
-				.goalAddress(dto.getGoalAddress()).waypointsPoint(dto.getWaypointsPoint())
-				.waypointsPlace(dto.getWaypointsPlace()).waypointsAddress(dto.getWaypointsAddress()).days(dto.getDays())
-				.user(user).trip(trip).build();
-
-		mapRepository.save(entity);
+		String title = tripService.titleToDB(userId, dto.getTripTitle());
+		TripEntity trip = tripRepository.getByTitle(title);
+        
+		StringBuilder waypointsBuilder;
+        for (MapDTO.MapObject mapObject : dto.getMapObject()){
+        	waypointsBuilder = new StringBuilder();
+            int days = mapObject.getDays();
+            String startPlace = mapObject.getStartPlace().replaceAll("</?[^>]+>", "");
+            String startAddress = mapObject.getStartAddress();
+            String goalPlace = mapObject.getGoalPlace().replaceAll("</?[^>]+>", "");
+            String goalAddress = mapObject.getGoalAddress();
+            
+            for (MapDTO.WayPointDTO wayPoint : mapObject.getWayPoints()) {
+            	waypointsBuilder
+                .append(wayPoint.getId())
+                .append(":")
+                .append(wayPoint.getValue().replaceAll("</?[^>]+>", ""))
+                .append(":")
+                .append(wayPoint.getAddress())
+                .append("|");
+            }
+            if (waypointsBuilder.length() > 0) {
+                waypointsBuilder.setLength(waypointsBuilder.length() - 1);
+            }
+            String waypoints = waypointsBuilder.toString();
+            
+            MapEntity entity = MapEntity.builder().user(user).trip(trip).days(days).startPlace(startPlace).startAddress(startAddress)
+            				.goalPlace(goalPlace).goalAddress(goalAddress).waypoint(waypoints).build();
+            System.out.println(entity);
+            mapRepository.save(entity);
+            
+        }
+	
 	}
 
 	// checkList객체 저장
 		@PostMapping("/3")
-		public ResponseEntity<?> postCheckList(@AuthenticationPrincipal String userId, @RequestBody CheckListDTO dto) {
+		public void postCheckList(@AuthenticationPrincipal String userId, @RequestBody CheckListDTO dto) {
 			UserEntity user = userRepository.findById(userId).get();
 			String title = tripService.titleToDB(userId, dto.getTripTitle());
 			TripEntity trip = tripRepository.getByTitle(title);
 			CheckListEntity entity = CheckListEntity.builder().user(user).trip(trip).
 					items(dto.getItems().stream().map(item -> item.getId() + ":" + item.getText() + ":" + item.isChecked()) // 문자열 변환 예시
-                    .collect(Collectors.joining(","))) // 리스트 -> 문자열 합치기
+                    .collect(Collectors.joining("|"))) // 리스트 -> 문자열 합치기
             .build();
-			checkListRepository.save(entity) ;
-//			ResponseDTO response = ResponseDTO.builder().value(entity).build() ;
-			return ResponseEntity.ok("저장 성공");
+			checkListRepository.save(entity) ;	
 		}
 
 	// ----------------- POST ---------------------------
@@ -160,34 +227,88 @@ public class TripController {
 	@PutMapping("/1")
 	public void putTrip(@AuthenticationPrincipal String userId, @RequestBody TripDTO dto) {
 		UserEntity user = userRepository.findById(userId).get();
-		String titleToCheck = tripService.titleToDB(dto.getTitle(), dto.getUserId());
+		String titleToCheck = tripService.titleToDB(userId, dto.getTitle());
 		String confirmedTitle = tripService.titleConfirm(titleToCheck);
-		TripEntity entity = TripEntity.builder().idx(dto.getIdx()) // post와 다른 점은 이거뿐
-				.title(confirmedTitle).startDate(dto.getStartDate()).lastDate(dto.getLastDate()).user(user).build();
+		TripEntity entity = TripEntity.builder().idx(dto.getIdx()) //GetMapping에서 idx를 받았기에 다시 가져온 idx로 trip을 구분하여 수정
+				.title(confirmedTitle).startDate(dto.getStartDate()).lastDate(dto.getLastDate()).
+				user(user).build();
 		tripRepository.save(entity);
 	}
 
 	@PutMapping("/2")
-	public void putMap(@AuthenticationPrincipal String userId, @RequestBody MapDTO dto) {
+	public void putMap(@RequestParam(name="userId") String userId, @RequestBody MapDTO dto) {
+		String title = tripService.titleToDB(userId, dto.getTripTitle());
+		TripEntity trip = tripRepository.getByTitle(title);
 		UserEntity user = userRepository.findById(userId).get();
-		TripEntity trip = tripRepository.getByTitle(dto.getTripTitle());
-		MapEntity entity = MapEntity.builder().idx(dto.getIdx()).startPoint(dto.getStartPoint())
-				.startPlace(dto.getStartPlace()).startAddress(dto.getStartAddress()).goalPoint(dto.getGoalPoint())
-				.goalPlace(dto.getGoalPlace()).goalAddress(dto.getGoalAddress()).waypointsPoint(dto.getWaypointsPoint())
-				.waypointsPlace(dto.getWaypointsPlace()).waypointsAddress(dto.getWaypointsAddress()).days(dto.getDays())
-				.trip(trip).user(user).build();
+		List<MapEntity> mapList = tripService.getMaps(userId, title);
+		
+		StringBuilder waypointsBuilder;
+		MapEntity entity;
+		List<MapDTO.MapObject> mapObjects = dto.getMapObject();
+		
+		int mapSize = mapList.size();
+		int objectSize = dto.getMapObject().size();
+		
+		if(mapSize==objectSize) {			//days갯수가 수정됨
+			 //그대로 진행
+		}else if(mapSize>objectSize){		//days 갯수 줄어듬 5개->3개면 i=[4],[3] 삭제해야함
+			for(int i=mapSize-1;i>=objectSize;i--) {
+				MapEntity removeEntity = mapList.get(i);
+				mapList.remove(i);
+				mapRepository.delete(removeEntity);
+			}
+		}else {								//days 갯수 늘어남 3->5개면 2개 추가해야함
+			for(int i=objectSize;i<mapSize;i++) {
+				entity = new MapEntity();
+				mapList.add(entity);
+			}
+		}
+		
+        for (int i=0;i<objectSize;i++){
+        	waypointsBuilder = new StringBuilder();
+            int days = mapObjects.get(i).getDays();
+            String startPlace =  mapObjects.get(i).getStartPlace().replaceAll("</?[^>]+>", "");
+            String startAddress =  mapObjects.get(i).getStartAddress();
+            String goalPlace =  mapObjects.get(i).getGoalPlace().replaceAll("</?[^>]+>", "");
+            String goalAddress =  mapObjects.get(i).getGoalAddress();
+            
+            for (MapDTO.WayPointDTO wayPoint :  mapObjects.get(i).getWayPoints()) {
+            	waypointsBuilder
+                .append(wayPoint.getId())
+                .append(":")
+                .append(wayPoint.getValue().replaceAll("</?[^>]+>", ""))
+                .append(":")
+                .append(wayPoint.getAddress())
+                .append("|");
+            }
+            if (waypointsBuilder.length() > 0) {
+                waypointsBuilder.setLength(waypointsBuilder.length() - 1);
+            }
+            String waypoints = waypointsBuilder.toString();
+            
+            MapEntity currentEntity = mapList.get(i);
+            
+            currentEntity.setUser(user);
+            currentEntity.setTrip(trip);
+            currentEntity.setDays(days);
+            currentEntity.setStartPlace(startPlace);
+            currentEntity.setStartAddress(startAddress);
+            currentEntity.setGoalPlace(goalPlace);
+            currentEntity.setGoalAddress(goalAddress);
+            currentEntity.setWaypoint(waypoints);
 
-		mapRepository.save(entity);
-	}
+            mapRepository.save(currentEntity); 
+        }
+        }
 
 	@PutMapping("/3")
-	public ResponseEntity<?> putCheckList(@AuthenticationPrincipal String userId, @RequestBody CheckListDTO dto) {
+	public ResponseEntity<?> putCheckList(@RequestParam(name="userId") String userId, @RequestBody CheckListDTO dto) {
 		UserEntity user = userRepository.findById(userId).get();
 		String title = tripService.titleToDB(userId, dto.getTripTitle());
 		TripEntity trip = tripRepository.getByTitle(title);
 		CheckListEntity entity = CheckListEntity.builder().user(user).trip(trip).
 				items(dto.getItems().stream().map(item -> item.getId() + ":" + item.getText() + ":" + item.isChecked()) // 문자열 변환 예시
-                .collect(Collectors.joining(","))) // 리스트 -> 문자열 합치기
+                .collect(Collectors.joining("|"))) // 리스트 -> 문자열 합치기
         .build();
 		checkListRepository.save(entity) ;
 		return ResponseEntity.ok("수정 성공");
@@ -196,10 +317,12 @@ public class TripController {
 	// ----------------- PUT ---------------------------
 	// ----------------- DELETE -------------------------
 	@DeleteMapping("/1/{idx}")
-	public void deleteTrip(@PathVariable("idx") Integer idx) { // pathVariable 어노테이션 사용시 { } 안에들어간 값과 idx 매개변수를 인식하기위해서는 어노테이션 뒤 같은 이름을 명시해야 한다 . 
+	public void deleteTrip(@PathVariable("idx") Integer idx) { // pathVariable 어노테이션 사용시 { } 안에들어간 값과 idx 매개변수를 인식하기위해서는
+																// 어노테이션 뒤 같은 이름을 명시해야 한다 .
 		tripRepository.deleteById(idx);
 	}
 
+	//trip객체 제외하곤 굳이 삭제할 거 없어보임.
 	@DeleteMapping("/2/{idx}")
 	public void deleteMap(@PathVariable Integer idx) {
 		mapRepository.deleteById(idx);
